kam: skip media-relay logic rewritten
- KamUsers will always call rtpengine except in known_dlgs:

* Intervpbx bounced call second processing
* Retail/wholesale call to retail DDI second processing

- KamTrunks will always call rtpengine except:

* calls from kamusers
* calls from carriers to retail DDIs
* second processing of bounced calls

--- a/kamailio/trunks/config/kamailio.cfg
+++ b/kamailio/trunks/config/kamailio.cfg
@@ -437,6 +437,9 @@ request_route {
     # Add record-route to INVITE requests
     record_route();
 
+    # Handle skip media-relay scenarios
+    route(SKIPMEDIARELAY);
+
     # Easy routing
     if ($var(is_from_inside) == 1) { # kamusers or AS calls
         # IvozProvider calling, route to corresponding GW
@@ -478,9 +481,6 @@ request_route {
         route(SELECT_NEXT_GW);
     } else { # carriers or bounced calls from myself
         if (uri == myself) {
-            if (src_ip == myself && remove_hf("X-Info-Skip-MediaRelay")) {
-                $dlg_var(skipMediaRelay) = 'yes';
-            }
             # Someone calling to my domain, dispatch to next hop
             remove_hf_re("^X-"); # Remove X-HEADERS from carriers
             route(GET_INFO_FROM_MATCHED_DDI);
@@ -499,6 +499,29 @@ request_route {
     }
 
     route(RELAY);
+}
+
+route[SKIPMEDIARELAY] {
+    if (ds_is_from_list("1")) {
+        # AS
+        xdbg("[$dlg_var(cidhash)] From AS, force media handling\n");
+    } else if ($si == $var(usersAddress) && $sp == "5060") {
+        # USERS
+        xdbg("[$dlg_var(cidhash)] From Users, skip media handling\n");
+        $dlg_var(skipMediaRelay) = 'yes';
+    } else if (src_ip == myself) {
+        # TRUNKS
+        xdbg("[$dlg_var(cidhash)] From Trunks, skip media handling\n");
+        $dlg_var(skipMediaRelay) = 'yes';
+    } else {
+        # CARRIER
+        if ($dlg_var(type) == 'retail') {
+            xdbg("[$dlg_var(cidhash)] From Carrier to retail, skip media handling\n");
+            $dlg_var(skipMediaRelay) = 'yes';
+        } else {
+            xdbg("[$dlg_var(cidhash)] From Carrier to non-retail, force media handling\n");
+        }
+    }
 }
 
 # This route sets $var(is_from_inside)
@@ -535,18 +558,6 @@ route[CHECK_BOUNCE] {
     if ($xavp(ra=>type) != $null) {
         xinfo("[$dlg_var(cidhash)] CHECK-BOUNCE: Call is to one of my DDIs\n");
         $dlg_var(bounced) = '1';
-        $dlg_var(skipMediaRelay) = 'yes';
-
-        # Keep X-Info-Skip-MediaRelay header added by Users in bounced calls
-        if (is_present_hf("X-Info-Skip-MediaRelay"))
-            insert_hf("X-Info-Skip-MediaRelay: yes\r\n");
-
-        if ($dlg_var(type) == 'retail' || $dlg_var(type) == 'wholesale') {
-            if ($xavp(ra=>type) == 'retail') {
-                # Retail/Wholesale calling to retail DDI: skip media-relay in KamUsers
-                insert_hf("X-Info-Skip-KamUsers-MediaRelay: yes\r\n");
-            }
-        }
     }
 
 }
@@ -1028,10 +1039,6 @@ route[PARSE_X_HEADERS] {
         xnotice("[$dlg_var(cidhash)] PARSE-X-HEADERS: Related leg: $dlg_var(xcallid)\n");
     }
 
-    if (remove_hf("X-Info-Skip-MediaRelay")) {
-        $dlg_var(skipMediaRelay) = 'yes';
-    }
-
     if ($dlg_var(type) == 'wholesale') return;
 
     # Extract ddiId for cdr entry
@@ -1476,11 +1483,6 @@ route[SETUP_KAMUSERS_CALL] {
     insert_hf("X-Info-Type: $dlg_var(type)\r\n");
     insert_hf("X-Info-Callee: $rU\r\n");
 
-    # Add Skip-MediaRelay header when retail/wholesale calling to retail DDI (bouncing)
-    if ($var(is_from_inside) == 2 && is_present_hf("X-Info-Skip-KamUsers-MediaRelay")) {
-        insert_hf("X-Info-Skip-MediaRelay: yes\r\n");
-    }
-
     # Check DDI is routed to a retail account
     $xavp(ra) = $null;
     sql_xquery("cb", "SELECT RA.name AS username, DS.domain AS domain FROM DDIs D INNER JOIN RetailAccounts RA ON D.retailAccountId=RA.id INNER JOIN Domains DS ON RA.domainId=DS.id WHERE DDIE164='$rU'", "ra");
@@ -1490,9 +1492,6 @@ route[SETUP_KAMUSERS_CALL] {
 
     # Make To header equal to R-URI
     uac_replace_to("$ru");
-
-    # No media handling for this proxy2proxy dialog
-    $dlg_var(skipMediaRelay) = 'yes';
 }
 
 # Relay request
