--- a/kamailio/users/config/kamailio.cfg
+++ b/kamailio/users/config/kamailio.cfg
@@ -504,8 +504,11 @@ request_route {
     route(GENERATE_PUBLISH);
 
     # From now on, everything is for INVITEs: track dialog
-    if (!is_known_dlg() || $si == $var(trunksAddress) || src_ip == myself) {
+    if (!is_known_dlg()) {
         dlg_manage();
+    } else if ($si == $var(trunksAddress) || src_ip == myself) {
+        dlg_manage();
+        $dlg_var(skipMediaRelay) = 'yes'; # bounced call second processing (intervpbx call or retail/wholesale calling to retail DDI)
     }
 
     # Calculate cidhash if not set
@@ -1086,7 +1089,6 @@ route[DISPATCH_TO_TRUNKS] {
     insert_hf("X-Info-BrandId: $dlg_var(brandId)\r\n");
     insert_hf("X-Info-CompanyId: $dlg_var(companyId)\r\n");
     insert_hf("X-Info-Type: $dlg_var(type)\r\n");
-    insert_hf("X-Info-Skip-MediaRelay: yes\r\n");
 
     if ($dlg_var(type) == "retail") {
         insert_hf("X-Info-RetailAccountId: $dlg_var(retailAccountId)\r\n");
@@ -1231,7 +1233,6 @@ route[STATIC_LOCATION] {
         $rd = $fd;
         $du = "sip:users.ivozprovider.local";
         uac_replace_from("sip:" + $xavp(rb=>name) + "@" + $fd);
-        $dlg_var(skipMediaRelay) = 'yes';
         return;
     }
 
@@ -1402,10 +1403,6 @@ route[PARSE_X_HEADERS] {
     $var(header) = 'X-Info-Callee';
     route(PARSE_MANDATORY_X_HEADER);
     $dlg_var(callee) = $var(header-value);
-
-    if (remove_hf("X-Info-Skip-MediaRelay")) {
-        $dlg_var(skipMediaRelay) = 'yes';
-    }
 
     # Extract xcallid
     if (is_present_hf("X-Call-Id")) {
